feat: added footer page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <!-- Overhead Nav Bar -->
+    <!------------------------------- Header ------------------------------->
     <header>
         <!-- Overhead Navbar (built from bootstrap navbar component)-->
         <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-gunmetal navbar-bottom-border">
@@ -368,6 +368,38 @@
             </div>
         </div>
     </section>
+    <!------------------------------- Footer ------------------------------->
+    <footer>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-6 footer-item">
+                    <h4>
+                        Blurb
+                    </h4>
+                    <p>
+                        Junior Full Stack Developer with past experience in supply chain management.
+                        Expert in VBA. Learning HTML, CSS, Javascript & Python with Code Insititute
+                    </p>
+                </div>
+                <div class="col-6 footer-item">
+                    <h4>
+                        Social
+                    </h4>
+                    <p>
+                        <a href="https://www.linkedin.com/in/stephen-harrold-338235173/" target="_blank"><i
+                                class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/steharr" target="_blank"><i class="fab fa-github-square"></i></a>
+                        <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12" id="copyright">
+                    <p>&#169 Stephen Harrold 2021</p>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
