cleaned up and finalised contact page structure for both small and large screens

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
             </div>
             <!-- Contact me small button that appears only on mobile devices-->
-            <a href="#contact" class="btn btn-sienna" id="home-nav-contact-special-div">Contact Me!<i
+            <a href="#contact" class="btn btn-steharr-standard" id="home-nav-contact-special-div">Contact Me!<i
                     class="fas fa-comments home-nav-button-icon"></i></a>
             <!-- Big home page navigation buttons that appears only on devices bigger than mobile -->
             <div class="row">
@@ -282,8 +282,8 @@
                         <p class="card-text">Fictional whiskey delivery website made while learning HTML, CSS &
                             Bootstrap
                         </p>
-                        <a href="https://github.com/steharr" class="btn btn-sienna" target="_blank">View on Github <i
-                                class="fab fa-github"></i></a>
+                        <a href="https://github.com/steharr" class="btn btn-steharr-standard" target="_blank">View on
+                            Github <i class="fab fa-github"></i></a>
                     </div>
                 </div>
                 <div class="card project-card">
@@ -293,8 +293,8 @@
                         <h5 class="card-title">SteHarr Portfolio Page</h5>
                         <p class="card-text">Personal website to showcase skills, projects & experience
                         </p>
-                        <a href="https://github.com/steharr" class="btn btn-sienna" target="_blank">View on Github <i
-                                class="fab fa-github"></i></a>
+                        <a href="https://github.com/steharr" class="btn btn-steharr-standard" target="_blank">View on
+                            Github <i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </div>
@@ -307,8 +307,8 @@
                         <h5 class="card-title">Process Capture Tool</h5>
                         <p class="card-text">Screen capture tool to enable better task handovers between teammates
                         </p>
-                        <a href="https://github.com/steharr" class="btn btn-sienna" target="_blank">View on Github <i
-                                class="fab fa-github"></i></a>
+                        <a href="https://github.com/steharr" class="btn btn-steharr-standard" target="_blank">View on
+                            Github <i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </div>
@@ -322,8 +322,8 @@
                         <p class="card-text">Excel Add-In to enable multiple users to edit shared spreadsheets
                             simultaneously
                         </p>
-                        <a href="https://github.com/steharr" class="btn btn-sienna" target="_blank">View on Github <i
-                                class="fab fa-github"></i></a>
+                        <a href="https://github.com/steharr" class="btn btn-steharr-standard" target="_blank">View on
+                            Github <i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </div>
@@ -338,32 +338,53 @@
                 </div>
             </div>
             <div class="row">
-                <div class="contact-form">
-                    <form action="https://formdump.codeinstitute.net" method="POST">
-                        <div class="contact-form-item">
-                            <label for="fname">First Name</label>
-                            <input class="form-input" type="text" id="fname" name:="first_name" placeholder="John"
-                                required />
-                        </div>
-                        <div class="contact-form-item">
-                            <label for="fname">Last Name</label>
-                            <input class="form-input" type="text" id="lname" name:="last_name" placeholder="Doe"
-                                required />
-                        </div>
-                        <div class="contact-form-item">
-                            <label for="email">Email</label>
-                            <input class="form-input" type="email" id="email" name:="email_address"
-                                placeholder="johndoe@gmail.com" required />
-                        </div>
-                        <div class="contact-form-item">
-                            <label for="message">Message</label>
-                            <textarea class="form-input" name="viewer_message" id="message" cols="30" rows="10"
-                                placeholder="your message" required></textarea>
-                        </div>
-                        <div class="contact-form-item">
-                            <button class="btn btn-sienna" type="submit">Submit <i class="fas fa-check"></i></button>
-                        </div>
-                    </form>
+                <div class="col-md-4 contact-info-box">
+                    <div>
+                        <h5>Want to know more?</h5>
+                        <a href="https://github.com/steharr" class="btn btn-steharr-standard" target="_blank">Download
+                            My CV
+                            <i class="fas fa-arrow-alt-circle-down"></i>
+                            </i></a>
+                    </div>
+                    <div>
+                        <h5>Want to get in touch?</h5>
+                        <p>Please fill in the form
+                            <span id="text-small-screen">below</span>
+                            <span id="text-large-screen">on the right</span>
+                            or contact me at
+                            <span class="bold-font">steharrold@gmail.com</span>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="contact-form">
+                        <form action="https://formdump.codeinstitute.net" method="POST">
+                            <div class="contact-form-item">
+                                <label for="fname">First Name</label>
+                                <input class="form-input" type="text" id="fname" name:="first_name" placeholder="John"
+                                    required />
+                            </div>
+                            <div class="contact-form-item">
+                                <label for="fname">Last Name</label>
+                                <input class="form-input" type="text" id="lname" name:="last_name" placeholder="Doe"
+                                    required />
+                            </div>
+                            <div class="contact-form-item">
+                                <label for="email">Email</label>
+                                <input class="form-input" type="email" id="email" name:="email_address"
+                                    placeholder="johndoe@gmail.com" required />
+                            </div>
+                            <div class="contact-form-item">
+                                <label for="message">Message</label>
+                                <textarea class="form-input" name="viewer_message" id="message" cols="30" rows="10"
+                                    placeholder="your message" required></textarea>
+                            </div>
+                            <div class="contact-form-item">
+                                <button class="btn btn-steharr-standard" type="submit">Send <i
+                                        class="fas fa-check"></i></button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
@@ -372,16 +393,16 @@
     <footer>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-6 footer-item">
+                <div class="col-md-6 footer-item">
                     <h4>
                         Blurb
                     </h4>
-                    <p>
+                    <p id="footer-blurb">
                         Junior Full Stack Developer with past experience in supply chain management.
                         Expert in VBA. Learning HTML, CSS, Javascript & Python with Code Insititute
                     </p>
                 </div>
-                <div class="col-6 footer-item">
+                <div class="col-md-6 footer-item">
                     <h4>
                         Social
                     </h4>
@@ -400,6 +421,7 @@
             </div>
         </div>
     </footer>
+    <!------------------------------- Bootstrap Javascript Links ------------------------------->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
