--- a/index.html
+++ b/index.html
@@ -272,61 +272,84 @@
                     <h2 class="page-header">Projects</h2>
                 </div>
             </div>
-            <div class="projects-box">
-                <h3>HTML & CSS</h3>
-                <div class="card project-card">
-                    <img src="assets/images/placeholder_project_cards.PNG" class="card-img-top project-card-image"
-                        alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Whiskey Drop Website </h5>
-                        <p class="card-text">Fictional whiskey delivery website made while learning HTML, CSS &
-                            Bootstrap
-                        </p>
-                        <a href="https://github.com/steharr" class="btn btn-steharr-standard" target="_blank">View on
-                            Github <i class="fab fa-github"></i></a>
+            <div class="row">
+                <div class="col-md-12 projects-container">
+                    <div class="card project-card">
+                        <img src="assets/images/placeholder_project_cards.PNG" class="card-img-top project-card-image"
+                            alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Whiskey Drop Website </h5>
+                            <p class="card-text">Fictional whiskey delivery website made while learning HTML, CSS &
+                                Bootstrap
+                            </p>
+                            <div class="tags-container">
+                                <span class="language-content">Languages:</span>
+                                <span class="programming-lang-tag">HTML</span>
+                                <span class="programming-lang-tag">CSS</span>
+                            </div>
+                            <a href="https://github.com/steharr" class="btn btn-steharr-standard" target="_blank">View
+                                on
+                                Github <i class="fab fa-github"></i></a>
+                        </div>
                     </div>
-                </div>
-                <div class="card project-card">
-                    <img src="assets/images/placeholder_project_cards.PNG" class="card-img-top project-card-image"
-                        alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">SteHarr Portfolio Page</h5>
-                        <p class="card-text">Personal website to showcase skills, projects & experience
-                        </p>
-                        <a href="https://github.com/steharr" class="btn btn-steharr-standard" target="_blank">View on
-                            Github <i class="fab fa-github"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="projects-box">
-                <h3>Python</h3>
-                <div class="card project-card">
-                    <img src="assets/images/placeholder_project_cards.PNG" class="card-img-top project-card-image"
-                        alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Process Capture Tool</h5>
-                        <p class="card-text">Screen capture tool to enable better task handovers between teammates
-                        </p>
-                        <a href="https://github.com/steharr" class="btn btn-steharr-standard" target="_blank">View on
-                            Github <i class="fab fa-github"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="projects-box">
-                <h3>VBA</h3>
-                <div class="card project-card">
-                    <img src="assets/images/placeholder_project_cards.PNG" class="card-img-top project-card-image"
-                        alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">VBA CoAuthoring Add-In</h5>
-                        <p class="card-text">Excel Add-In to enable multiple users to edit shared spreadsheets
-                            simultaneously
-                        </p>
-                        <a href="https://github.com/steharr" class="btn btn-steharr-standard" target="_blank">View on
-                            Github <i class="fab fa-github"></i></a>
+                    <div class="card project-card">
+                        <img src="assets/images/placeholder_project_cards.PNG" class="card-img-top project-card-image"
+                            alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">SteHarr Portfolio Page</h5>
+                            <p class="card-text">Personal website to showcase skills, projects & experience
+                            </p>
+                            <div class="tags-container">
+                                <span class="language-content">Languages:</span>
+                                <span class="programming-lang-tag">HTML</span>
+                                <span class="programming-lang-tag">CSS</span>
+                                <span class="programming-lang-tag">Javascript</span>
+                            </div>
+                            <a href="https://github.com/steharr" class="btn btn-steharr-standard" target="_blank">View
+                                on
+                                Github <i class="fab fa-github"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-12 projects-container">
+                    <div class="card project-card">
+                        <img src="assets/images/placeholder_project_cards.PNG" class="card-img-top project-card-image"
+                            alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Process Capture Tool</h5>
+                            <p class="card-text">Screen capture tool to enable better task handovers between teammates
+                            </p>
+                            <div class="tags-container">
+                                <span class="language-content">Languages:</span>
+                                <span class="programming-lang-tag">Python</span>
+                            </div>
+                            <a href="https://github.com/steharr" class="btn btn-steharr-standard" target="_blank">View
+                                on
+                                Github <i class="fab fa-github"></i></a>
+                        </div>
+                    </div>
+                    <div class="card project-card">
+                        <img src="assets/images/placeholder_project_cards.PNG" class="card-img-top project-card-image"
+                            alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">VBA CoAuthoring Add-In</h5>
+                            <p class="card-text">Excel Add-In to enable multiple users to edit shared spreadsheets
+                                simultaneously
+                            </p>
+                            <div class="tags-container">
+                                <span class="language-content">Languages:</span>
+                                <span class="programming-lang-tag">VBA</span>
+                            </div>
+                            <a href="https://github.com/steharr" class="btn btn-steharr-standard" target="_blank">View
+                                on
+                                Github <i class="fab fa-github"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
     </section>
     <!------------------------------- Contact Page ------------------------------->
@@ -425,8 +448,11 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+        integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
 </body>
 
