added more content to projects page in order to showcase the page structure

--- a/index.html
+++ b/index.html
@@ -278,9 +278,26 @@
                         <img src="assets/images/placeholder_project_cards.PNG" class="card-img-top project-card-image"
                             alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Whiskey Drop Website </h5>
-                            <p class="card-text">Fictional whiskey delivery website made while learning HTML, CSS &
-                                Bootstrap
+                            <h5 class="card-title">Love Running Website</h5>
+                            <p class="card-text">Fictional running group website made while learning HTML and CSS
+                            </p>
+                            <div class="tags-container">
+                                <span class="language-content">Languages:</span>
+                                <span class="programming-lang-tag">HTML</span>
+                                <span class="programming-lang-tag">CSS</span>
+                            </div>
+                            <a href="https://github.com/steharr" class="btn btn-steharr-standard" target="_blank">View
+                                on
+                                Github <i class="fab fa-github"></i></a>
+                        </div>
+                    </div>
+                    <div class="card project-card">
+                        <img src="assets/images/placeholder_project_cards.PNG" class="card-img-top project-card-image"
+                            alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Whiskey Drop Website</h5>
+                            <p class="card-text">Fictional whiskey delivery website made while
+                                learning git and Bootstrap
                             </p>
                             <div class="tags-container">
                                 <span class="language-content">Languages:</span>
