refactor: adjusted arrangement of skills page for small and large screens, revisualized soft skills section

--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 col-md-7 skills-box">
-                    <h3 class="skills-box-header">Technologies</h3>
+                <div class="col-md-8 skills-box-container">
+                    <h3 class="skills-box-header">Coding Languages</h3>
                     <!-- coding languages progress bars (adapted from bootstrap progress bars) -->
                     <div class="row coding-languages-item">
                         <div class="col-4 language-type">HTML</div>
@@ -234,32 +234,46 @@
                                 aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
-                </div>
-                <div class="col-12 col-md-4 skills-box">
-                    <div class="col-12">
-                        <h3 class="skills-box-header">Expertise</h3>
-                        <div class="row">
-                            <div class="col-6">
-                                <h4>Software</h4>
-                                <ul>
-                                    <li class="expertise-item">RPA UiPath</li>
-                                    <li class="expertise-item">CRM Microsoft Dynamics</li>
-                                    <li class="expertise-item">SAP ERP Software</li>
-                                    <li class="expertise-item">MADYMO Crash Test Simulation Analyis</li>
-                                </ul>
-                            </div>
-                            <div class="col-6">
-                                <h4>Soft</h4>
-                                <ul>
-                                    <li class="expertise-item">Process Optimisation</li>
-                                    <li class="expertise-item">Project Managment</li>
-                                    <li class="expertise-item">Problem Solving</li>
-                                    <li class="expertise-item">Presentation</li>
-                                </ul>
+                    <div class="row">
+                        <div class="col-12">
+                            <h3 class="skills-box-header">Soft Skills</h3>
+                            <div class="soft-skills-container">
+                                <div class="soft-skill-item-big">
+                                    <div class="soft-skill-item-small">
+                                        <h6>Project Management</h6>
+                                    </div>
+                                </div>
+                                <div class="soft-skill-item-big">
+                                    <div class="soft-skill-item-small">
+                                        <h6>Team Leader</h6>
+                                    </div>
+                                </div>
+                                <div class="soft-skill-item-big">
+                                    <div class="soft-skill-item-small">
+                                        <h6>Change Management</h6>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
+                </div>
 
+                <div class="col-md-4 skills-box-container">
+                    <!-- <h3 class="skills-box-header">Expertise</h3> -->
+                    <h3 class="skills-box-header">Software Expertise</h3>
+                    <ul>
+                        <li><span class="skills-item-tag">Microsoft Office</span></li>
+                        <p class="expertise-description">Extensive experience in task automation in
+                            the
+                            microsoft office suite (using VBA)</p>
+                        <li><span class="skills-item-tag">RPA</span></li>
+                        <p class="expertise-description">Worked on multiple projects to develop UiPath bots</p>
+                        <li><span class="skills-item-tag">SAP ERP</span></li>
+                        <p class="expertise-description">In depth knowledge of SAP for logistics customer
+                            order management</p>
+                        <li><span class="skills-item-tag">CRM</span></li>
+                        <p class="expertise-description">Experienced with Microsoft Dynamics</p>
+                    </ul>
                 </div>
             </div>
         </div>
