refactor: adjusted arrangement of elements on about me page to a more logical structure

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         <div class="container">
             <div class="row home">
                 <!-- section container for profile image -->
-                <div class="col-12 col-md-6 home-hero-image-div">
+                <div class="col-md-6 home-hero-image-div">
                     <!-- profile image circle div -->
                     <div class="home-hero-image-circle"></div>
                 </div>
-                <div class="col-12 col-md-6 home-hero-blurb">
+                <div class="col-md-6 landing-hero-blurb">
                     <div class="home-hero-blurb-text">
                         <h2>Hi! My name is ...</h2>
                         <h1>Stephen Harrold</h1>
@@ -65,12 +65,14 @@
                     </div>
                 </div>
             </div>
-            <!-- Contact me small button that appears only on mobile devices-->
-            <a href="#contact" class="btn btn-steharr-standard" id="home-nav-contact-special-div">Contact Me!<i
-                    class="fas fa-comments home-nav-button-icon"></i></a>
             <!-- Big home page navigation buttons that appears only on devices bigger than mobile -->
             <div class="row">
-                <div class="col-12 col-md-3 home-nav-button-div">
+                <div class="col-12">
+                    <!-- Contact me small button that appears only on mobile devices-->
+                    <a href="#contact" class="btn btn-steharr-standard" id="home-nav-contact-special-div">Contact Me!<i
+                            class="fas fa-comments home-nav-button-icon"></i></a>
+                </div>
+                <div class="col-md-3 home-nav-button-div">
                     <div class="home-nav-button-circle">
                         <!-- placeholder-aboutme link -->
                         <a href="#" class="home-nav-button-object">
@@ -79,7 +81,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-12 col-md-3 home-nav-button-div">
+                <div class="col-md-3 home-nav-button-div">
                     <div class="home-nav-button-circle">
                         <!-- placeholder-skills link -->
                         <a href="#" class="home-nav-button-object">
@@ -88,7 +90,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-12 col-md-3 home-nav-button-div">
+                <div class="col-md-3 home-nav-button-div">
                     <div class="home-nav-button-circle">
                         <!-- placeholder-projects link -->
                         <a href="#" class="home-nav-button-object">
@@ -97,7 +99,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-12 col-md-3 home-nav-button-div">
+                <div class="col-md-3 home-nav-button-div">
                     <div class="home-nav-button-circle">
                         <!-- placeholder-contact link -->
                         <a href="#" class="home-nav-button-object">
@@ -114,61 +116,97 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="page-header">About Me</h2>
+                    <h2 class="page-header">About Me <i class="fas fa-book-open home-nav-button-icon"></i></h2>
                 </div>
             </div>
-            <div class="row col-9 about-timeline-visual">
-                <div class="col-md-3">
-                    <div class="about-timeline-image study"></div>
+        </div>
+        <div class="container container-page-content-about">
+            <div class="row">
+                <div class="col-md-4 px-0">
+                    <div class="about-timeline-visual timeline-dashed-line">
+                        <div class="about-timeline-image study"></div>
+                    </div>
+                    <div class="container-timeline-item timeline-dashed-line">
+                        <div class="timeline-item-description">
+                            <div class="timeline-item-description-text">
+                                <h3 class="timeline-item-heading">Study</h3>
+                                <p>I studied at Trinity College Dublin to a Masters' Degree level. My
+                                    degree was in Mechanical and
+                                    Manufacturing Engineering. In this course I enhanced my problem solving skills and
+                                    developed
+                                    a
+                                    strong work ethic. My main drive at this point was physics and maths but I gained
+                                    some
+                                    exposure
+                                    to programming at this early stage, working with C++ for my computer modules.</p>
+                                <p> For my Masters
+                                    thesis, I was assessing the effectiveness of using a crash test software called <a
+                                        href="https://tass.plm.automation.siemens.com/madymo" target="_blank">MADYMO</a>
+                                    to
+                                    help
+                                    diagnose sports concussion injuries. My passion for
+                                    software/IT started to grow during this time</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="about-timeline-image work"></div>
+                <div class="col-md-4 px-0">
+                    <div class="about-timeline-visual timeline-dashed-line">
+                        <div class="about-timeline-image work"></div>
+                    </div>
+                    <div class="container-timeline-item timeline-dashed-line">
+                        <div class="timeline-item-description">
+                            <div class="timeline-item-description-text">
+                                <h3 class="timeline-item-heading">Work</h3>
+                                <p>After university, I started work at global semiconductor manufacturer <a
+                                        href="https://www.infineon.com/" target="_blank">Infineon Technologies</a> where
+                                    I
+                                    work
+                                    today. My role is as a supply chain
+                                    Order Managment Specialist. I work alot on process engineering; optimizing our order
+                                    management
+                                    processes in SAP to be
+                                    as efficient as possible. </p>
+                                <p> I also coordinate RPA projects to help automate our operations as much
+                                    as possible. There is a big need for automating manual tasks within my team; this is
+                                    where I
+                                    have worked extensively with VBA to automate various spreadsheet tasks such as
+                                    report
+                                    generation, database
+                                    maintenance, email sending and much more.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="about-timeline-image now"></div>
-                </div>
-            </div>
-            <div class="row about-timeline">
-                <div class="col-12 col-md-3 about-timeline-item">
-                    <h3 class="timeline-item-title">Study</h3>
-                    <p>I studied at Trinity College Dublin to a Masters' Degree level. My
-                        degree was in Mechanical and
-                        Manufacturing Engineering. In this course I enhanced my problem solving skills and developed a
-                        strong work ethic. My main drive at this point was physics and maths but I gained some exposure
-                        to programming at this early stage, working with C++ for my computer modules.</p>
-                    <p> For my Masters
-                        thesis, I was assessing the effectiveness of using a crash test software called <a
-                            href="https://tass.plm.automation.siemens.com/madymo" target="_blank">MADYMO</a> to help
-                        diagnose sports concussion injuries. My passion for
-                        software/IT started to grow during this time</p>
-                </div>
-                <div class="col-12 col-md-3 about-timeline-item">
-                    <h3 class="timeline-item-title">Work</h3>
-                    <p>After university, I started work at global semiconductor manufacturer<a
-                            href="https://www.infineon.com/" target="_blank"> Infineon Technologies</a> where I work
-                        today. My role is as a supply chain
-                        Order Managment Specialist. I work alot on process engineering; optimizing our order management
-                        processes in SAP to be
-                        as efficient as possible. </p>
-                    <p> I also coordinate RPA projects to help automate our operations as much
-                        as possible. There is a big need for automating manual tasks within my team; this is where I
-                        have worked extensively with VBA to automate various spreadsheet tasks such as report
-                        generation, database
-                        maintenance, email sending and much more.</p>
-                </div>
-                <div class="col-12 col-md-3 about-timeline-item">
-                    <h3 class="timeline-item-title">Now</h3>
-                    <p>Having become fluent at using VBA and enjoyed programming so much, I decided I wanted to pursue a
-                        career in development. I enrolled in <a href="https://codeinstitute.net/" target="_blank">
-                            Code Insititute's</a> Full Stack Software Development Diploma and am currently doing the
-                        course part time. </p>
-                    <p> I am learning various front end and back end languages such as HTML, CSS,
-                        Javascript and Python. I am also advancing my skills as much as I can in my spare time and
-                        building up my github portfolio with projects I have developed in VBA.</p>
-                </div>
-                <div class="col-12 col-md-3">
-                    <h3 class="">Latest Project</h3>
-                    <p>Placeholder Text</p>
+                <div class="col-md-4 px-0">
+                    <div class="about-timeline-visual timeline-dashed-line">
+                        <div class="about-timeline-image now"></div>
+                    </div>
+                    <div class="container-timeline-item timeline-dashed-line">
+                        <div class="timeline-item-description">
+                            <div class="timeline-item-description-text">
+                                <h3 class="timeline-item-heading">Now</h3>
+                                <p>Having become fluent at using VBA and enjoyed programming so much, I decided I wanted
+                                    to
+                                    pursue a
+                                    career in development. I enrolled in <a href="https://codeinstitute.net/"
+                                        target="_blank">
+                                        Code Insititute's</a> Full Stack Software Development Diploma and am currently
+                                    doing
+                                    the
+                                    course part time. </p>
+                                <p> I am learning various front end and back end languages such as HTML, CSS,
+                                    Javascript and Python. I am also advancing my skills as much as I can in my spare
+                                    time
+                                    and
+                                    building up my github portfolio with projects I have developed in VBA.</p>
+                                <p> Currently, I am working on my first Code Institute milestone project. You can find
+                                    details of it and much more by jumping to <a href="#projects"
+                                        class="btn btn-steharr-standard btn-quicklink-projects" id="">Projects <i
+                                            class="fas fa-lightbulb home-nav-button-icon"></i></a></p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -178,9 +216,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="page-header">Skills</h2>
+                    <h2 class="page-header">Skills <i class="fas fa-tools home-nav-button-icon"></i></h2>
                 </div>
             </div>
+        </div>
+        <div class="container container-page-content-skills">
             <div class="row">
                 <div class="col-md-8 skills-box-container">
                     <h3 class="skills-box-header">Coding Languages</h3>
@@ -283,7 +323,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="page-header">Projects</h2>
+                    <h2 class="page-header">Projects <i class="fas fa-lightbulb home-nav-button-icon"></i></h2>
                 </div>
             </div>
             <div class="row">
@@ -388,9 +428,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="page-header">Contact</h2>
+                    <h2 class="page-header">Contact <i class="fas fa-comments home-nav-button-icon"></i></h2>
                 </div>
             </div>
+        </div>
+        <div class="container container-page-content-contact">
             <div class="row">
                 <div class="col-md-4 contact-info-box">
                     <div>
